# BarrelDB

./: .gitignore  README.md  barrelDB.opam  dune-project  postMixDB.opam
.github/workflows/: dune_test.yaml
dune.lock/: lock.dune
important-data.db/: eliozjnlcl
lib/: binaryUtils.ml  db.ml  db.mli  dune  eval.ml  parse.ml  parse.mli  repl.ml  tokenize.ml
test/: binaryUtilsTest.ml  dbTest.ml  dune  evalTest.ml  parseTest.ml  test.ml  tokenizeTest.ml
